[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
]
test = [
    "pytest",
    "pytest-instafail",
    "pytest-randomly", 
]

[tool.ruff]
line-length = 110
extend-select = [
    "I",  # isort, (auto-fixable)
    "ISC",  # Implicit String concatenation
    "RUF100",  # Unused noqa (auto-fixable)
]
ignore = [
    "E501",  # line too long handled by black
]

[tool.ruff.format]
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 60
